| Bug #44036 | compiler error - ndberror.c contains C++ comment | ||
|---|---|---|---|
| Submitted: | 2 Apr 2009 8:03 | Modified: | 15 Apr 2009 2:52 |
| Reporter: | Magnus Blåudd | Email Updates: | |
| Status: | Closed | Impact on me: | |
| Category: | MySQL Cluster: Cluster (NDB) storage engine | Severity: | S3 (Non-critical) |
| Version: | 6.2 | OS: | Any |
| Assigned to: | Magnus Blåudd | CPU Architecture: | Any |
[2 Apr 2009 8:03]
Magnus Blåudd
[8 Apr 2009 13:36]
Bugs System
A patch for this bug has been committed. After review, it may be pushed to the relevant source trees for release in the next version. You can access the patch from: http://lists.mysql.com/commits/71651
[8 Apr 2009 14:30]
Frazer Clement
Nice cleanup and use of the unit test stuff. How come it's ok to remove the SignalSender code? Otherwise looks ok to push.
[8 Apr 2009 18:08]
Magnus Blåudd
The real SignalSender code is in src/ndbapi/, someone has checked in an unused copy in src/ndbapi/signal-sender a very long time ago(1889?) and the files are already gone from 6.3(but the dir is there)
[14 Apr 2009 9:17]
Bugs System
Pushed into 5.1.32-ndb-6.2.18 (revid:magnus.blaudd@sun.com-20090414085808-tz8jb8yppcdsue95) (version source revid:magnus.blaudd@sun.com-20090414085808-tz8jb8yppcdsue95) (merge vers: 5.1.32-ndb-6.2.18) (pib:6)
[14 Apr 2009 9:18]
Bugs System
Pushed into 5.1.32-ndb-6.3.25 (revid:magnus.blaudd@sun.com-20090414085808-9kuh0g399gz9qyjw) (version source revid:magnus.blaudd@sun.com-20090414085808-9kuh0g399gz9qyjw) (merge vers: 5.1.32-ndb-6.3.25) (pib:6)
[14 Apr 2009 9:21]
Bugs System
Pushed into 5.1.32-ndb-7.0.5 (revid:magnus.blaudd@sun.com-20090414090000-sia02q0abam1ece0) (version source revid:magnus.blaudd@sun.com-20090414090000-sia02q0abam1ece0) (merge vers: 5.1.32-ndb-7.0.5) (pib:6)
[15 Apr 2009 2:52]
Jon Stephens
Documented in the NDB-6.2.18, 6.3.25, and 7.0.5 changelogs as follows:
The file ndberror.c contained a C++-style comment, which caused
builds to fail with some C compilers.
[15 Apr 2009 8:08]
Bugs System
A patch for this bug has been committed. After review, it may be pushed to the relevant source trees for release in the next version. You can access the patch from: http://lists.mysql.com/commits/72104
[15 Apr 2009 8:08]
Bugs System
Pushed into 5.1.32-ndb-6.2.18 (revid:magnus.blaudd@sun.com-20090415080717-w7ru50pnhbxdt9pf) (version source revid:magnus.blaudd@sun.com-20090415080717-w7ru50pnhbxdt9pf) (merge vers: 5.1.32-ndb-6.2.18) (pib:6)
[15 Apr 2009 8:17]
Bugs System
Pushed into 5.1.32-ndb-6.3.25 (revid:magnus.blaudd@sun.com-20090415081445-vr54z11z11jjutq6) (version source revid:magnus.blaudd@sun.com-20090415081445-vr54z11z11jjutq6) (merge vers: 5.1.32-ndb-6.3.25) (pib:6)
[15 Apr 2009 8:25]
Bugs System
Pushed into 5.1.32-ndb-7.0.6 (revid:magnus.blaudd@sun.com-20090415081700-vvyg363aaqgn5jr1) (version source revid:magnus.blaudd@sun.com-20090415081700-vvyg363aaqgn5jr1) (merge vers: 5.1.32-ndb-7.0.6) (pib:6)
