BUG#44036 compiler error - ndberror.c contains C++ comment  - Fixes for compiling with BUILD/compile-pentium-debug-max --warning-mode=pedantic