storage/ndb/include/ndbapi/NdbScanOperation.hpp
@@ -670,6 +670,6 @@ NdbScanOperation::getNdbTransaction() const
    * scan's 'internal' / buddy transaction object
    */
   return m_transConnection;
-};
+}
 
 #endif
